# lindelion

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Cargo.toml  DSP_RECTIFICATION_PLAN.md  DYNAMIC-RESPONSE-PLAN.md  HOTMIC-PORT-PLAN.md  LAMATH_WAVEGUIDE_IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  RESAMPLE_PRO_FIDELITY_PLAN.md  WAVEGUIDE_COMPLETION_PLAN.md  clippy.toml  glirdir-completion-plan.md  glirdir-spec-v0.1.md  lamath-v2-implementation-plan.md  linnod-implementation-plan.md  platform.yml  resonator-architecture-debt.md  resonator-synth-spec-v0.1.md  slicer-spec-v0.1.md  utility.txt
crates/lindelion-audio-expression/: Cargo.toml
crates/lindelion-audio-expression/src/: lib.rs  loudness.rs  note.rs  phrase.rs  source.rs  streaming.rs  tests.rs
crates/lindelion-capture/: Cargo.toml
crates/lindelion-capture/src/: lib.rs  tests.rs
crates/lindelion-dsp-utils/: Cargo.toml
crates/lindelion-dsp-utils/benches/: README.md  analysis.rs  delay.rs  envelope.rs  filters.rs
crates/lindelion-dsp-utils/src/: analysis.rs  delay.rs  envelope.rs  envelope_follower.rs  filters.rs  interpolation.rs  lib.rs  math.rs  ola.rs  params.rs  phase.rs  playback.rs  resampling.rs  saturation.rs  stft.rs  window.rs
crates/lindelion-dsp-utils/src/analysis/: artifact.rs  measurements.rs  pitch.rs
crates/lindelion-dsp-utils/tests/: plot_data.rs
crates/lindelion-onset-detect/: Cargo.toml
crates/lindelion-onset-detect/benches/: README.md  onset.rs
crates/lindelion-onset-detect/src/: energy.rs  flux_threshold.rs  lib.rs  manual_grid.rs  markers.rs  pitch_stability.rs  spectral_flux.rs  spectral_flux_tests.rs  tests.rs
crates/lindelion-onset-detect/tests/: plot_data.rs
crates/lindelion-phrase-analysis/: Cargo.toml
crates/lindelion-phrase-analysis/src/: lib.rs  tests.rs
crates/lindelion-pitch-detect/: Cargo.toml
crates/lindelion-pitch-detect/assets/: swift_f0.onnx
crates/lindelion-pitch-detect/benches/: README.md  pitch.rs
crates/lindelion-pitch-detect/src/: lib.rs  swiftf0.rs  tests.rs
crates/lindelion-pitch-detect/tests/: plot_data.rs
crates/lindelion-pitch-shift/: Cargo.toml
crates/lindelion-pitch-shift/src/: analyzer.rs  cache.rs  lib.rs  pitch_synchronous_synthesis.rs  resample_pro_analysis.rs  resample_pro_render.rs  resample_pro_stretch.rs  resample_stretch_compat.rs  spectral.rs  spectral_peak_synthesis.rs  synthesis.rs  synthesis_support.rs  tests.rs  varispeed_synthesis.rs
crates/lindelion-pitch-shift/src/resample_pro_stretch/: mod.rs  peak_lock.rs  rtpghi.rs
crates/lindelion-pitch-shift/src/tests/: fidelity_battery.rs  real_fixtures.rs  resample_pro.rs  resample_stretch.rs  sax_fixture.rs  synthesis_quality.rs  varispeed.rs
crates/lindelion-sample-library/: Cargo.toml
crates/lindelion-sample-library/src/: file_library.rs  lib.rs  tests.rs  wav.rs
crates/lindelion-ui/: Cargo.toml
crates/lindelion-ui/src/: editor_surface.rs  glirdir_vizia.rs  glirdir_vizia_tests.rs  lib.rs  linnod_vizia.rs  linnod_vizia_tests.rs  resonator_vizia.rs  resonator_vizia_tests.rs  tests.rs  vizia_clipboard.rs  vizia_controls.rs  vizia_file_dialogs.rs
crates/lindelion-ui/src/glirdir_vizia/: platform.rs  platform_controls.rs  platform_drag.rs  platform_drawing.rs  platform_layout.rs  platform_settings.rs  platform_state.rs
crates/lindelion-ui/src/linnod_vizia/: host.rs  platform.rs  platform_controls.rs  platform_detection_controls.rs  platform_drawing.rs  platform_drop.rs  platform_layout.rs  platform_playback_controls.rs  platform_settings.rs  platform_state.rs  platform_style.rs  platform_text.rs  platform_waveform.rs  platform_waveform_drawing.rs  platform_waveform_geometry.rs
crates/lindelion-ui/src/resonator_vizia/: platform.rs  platform_bridge.rs  platform_controls.rs  platform_drawing.rs  platform_drop.rs  platform_layout.rs  platform_layout_live_input.rs  platform_layout_text.rs  platform_settings.rs  platform_state.rs  platform_style.rs
crates/lindelion-ui/src/vizia_controls/: choice.rs  drag_value.rs
plugins/glirdir/: Cargo.toml  README.md
plugins/glirdir/benches/: README.md  analysis.rs
plugins/glirdir/src/: analysis.rs  analysis_job.rs  audition.rs  capture.rs  detection_quality_tests.rs  lib.rs  midi_export.rs  parameters.rs  patch.rs  patch_io.rs  plugin.rs  sample_library.rs  worker.rs
plugins/glirdir/src/parameters/: codecs.rs  registry.rs  tests.rs
plugins/glirdir/src/vst3_entry/: controller.rs  editor.rs  factory.rs  messages.rs  mod.rs  processor.rs  processor_jobs.rs  processor_tests.rs  tests.rs
plugins/linnod/: Cargo.toml  README.md
plugins/linnod/benches/: README.md  runtime.rs
plugins/linnod/src/: analysis.rs  analysis_job.rs  lib.rs  parameters.rs  patch.rs  patch_detection.rs  patch_engine.rs  patch_io.rs  patch_pad.rs  patch_tests.rs  plugin.rs  runtime.rs  tuning.rs  worker.rs
plugins/linnod/src/runtime/: declick.rs  pitch_source.rs  prepared_resample_pro.rs  tests.rs  trigger.rs
plugins/linnod/src/vst3_entry/: controller.rs  controller_helpers.rs  editor.rs  editor_codecs.rs  factory.rs  messages.rs  messages_slice_edit.rs  mod.rs  patch_edits.rs  (+8 more)
plugins/resonator-synth/: Cargo.toml
plugins/resonator-synth/src/: lib.rs  parameters.rs  patch.rs  patch_io.rs  plugin.rs  plugin_tests.rs  runtime.rs  vst3_entry.rs
plugins/slicer/: Cargo.toml
plugins/slicer/src/: lib.rs
speech/bass-enhancer/: Cargo.toml
speech/bass-enhancer/src/: lib.rs
speech/bass-enhancer/tests/: fidelity.rs
speech/limiter/: Cargo.toml
speech/limiter/src/: lib.rs
speech/limiter/tests/: fidelity.rs
speech/signals/: Cargo.toml  README.md
speech/signals/benches/: signals.rs
speech/signals/src/: analyzer.rs  inline.rs  lib.rs  worker.rs
speech/spectral-contrast/: Cargo.toml
speech/spectral-contrast/src/: lib.rs
speech/spectral-contrast/tests/: fidelity.rs
speech/speech-denoiser/: Cargo.toml
speech/speech-denoiser/src/: lib.rs
speech/speech-denoiser/tests/: contract.rs  integration.rs
speech/voice-gate/: Cargo.toml
speech/voice-gate/src/: lib.rs
speech/voice-gate/tests/: contract.rs  integration.rs
(+327 files in other folders)
