[workspace]
resolver = "3"
members = [
    "crates/lindelion-dsp-utils",
    "crates/lindelion-onset-detect",
    "crates/lindelion-plugin-shell",
    "crates/lindelion-psola",
    "crates/lindelion-sample-library",
    "crates/lindelion-ui",
    "plugins/lamath",
    "plugins/linnod",
    "xtask",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "UNLICENSED"
authors = ["Ahara"]

[workspace.dependencies]
lindelion-dsp-utils = { path = "crates/lindelion-dsp-utils" }
lindelion-onset-detect = { path = "crates/lindelion-onset-detect" }
lindelion-plugin-shell = { path = "crates/lindelion-plugin-shell" }
lindelion-psola = { path = "crates/lindelion-psola" }
lindelion-sample-library = { path = "crates/lindelion-sample-library", default-features = false }
lindelion-ui = { path = "crates/lindelion-ui" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
vizia = { git = "https://github.com/vizia/vizia.git", rev = "cb3346008ece56c09c39344ed1289357dba96ce1", default-features = false, features = ["baseview"] }
vst3 = "0.3.0"
