[workspace]
resolver = "3"
members = [
    "crates/lindelion-dsp-utils",
    "crates/lindelion-test-allocator",
    "crates/lindelion-capture",
    "crates/lindelion-audio-expression",
    "crates/lindelion-midi",
    "crates/lindelion-onset-detect",
    "crates/lindelion-phrase-analysis",
    "crates/lindelion-pitch-detect",
    "crates/lindelion-pitch-shift",
    "crates/lindelion-plugin-metadata",
    "crates/lindelion-plugin-shell",
    "crates/lindelion-sample-library",
    "crates/lindelion-ui",
    "plugins/glirdir",
    "plugins/lamath",
    "plugins/linnod",
    "xtask",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "UNLICENSED"
authors = ["Ahara"]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lindelion-dsp-utils = { path = "crates/lindelion-dsp-utils" }
lindelion-test-allocator = { path = "crates/lindelion-test-allocator" }
lindelion-capture = { path = "crates/lindelion-capture" }
lindelion-audio-expression = { path = "crates/lindelion-audio-expression" }
lindelion-midi = { path = "crates/lindelion-midi" }
lindelion-onset-detect = { path = "crates/lindelion-onset-detect" }
lindelion-phrase-analysis = { path = "crates/lindelion-phrase-analysis" }
lindelion-pitch-detect = { path = "crates/lindelion-pitch-detect" }
lindelion-pitch-shift = { path = "crates/lindelion-pitch-shift" }
lindelion-plugin-metadata = { path = "crates/lindelion-plugin-metadata" }
lindelion-plugin-shell = { path = "crates/lindelion-plugin-shell" }
lindelion-sample-library = { path = "crates/lindelion-sample-library", default-features = false }
lindelion-ui = { path = "crates/lindelion-ui" }
midly = "0.5.3"
rand = "0.8"
rand_pcg = "0.3"
realfft = "3.5.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tract-onnx = "0.23.0-dev.5"
vizia = { git = "https://github.com/vizia/vizia.git", rev = "cb3346008ece56c09c39344ed1289357dba96ce1", default-features = false, features = ["baseview"] }
vst3 = "0.3.0"
