[package]
name = "lindelion-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lindelion-dsp-utils.workspace = true
lindelion-plugin-shell.workspace = true
lindelion-sample-library.workspace = true
serde.workspace = true

[dev-dependencies]
lindelion-test-allocator.workspace = true
toml.workspace = true
