[package]
name = "lindelion-dsp-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
rand_pcg.workspace = true

[[bench]]
name = "filters"
harness = false

[[bench]]
name = "analysis"
harness = false

[[bench]]
name = "envelope"
harness = false

[[bench]]
name = "delay"
harness = false
