[package]
name = "lindelion-onset-detect"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lindelion-dsp-utils.workspace = true
lindelion-pitch-detect.workspace = true
realfft.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
rand_pcg.workspace = true

[[bench]]
name = "onset"
harness = false
