[package]
name = "lindelion-phrase-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lindelion-dsp-utils.workspace = true
lindelion-midi.workspace = true
lindelion-onset-detect.workspace = true
lindelion-pitch-detect.workspace = true
serde.workspace = true
