[package]
name = "lindelion-pitch-detect"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lindelion-dsp-utils.workspace = true
serde.workspace = true
tract-onnx.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
rand_pcg.workspace = true

[[bench]]
name = "pitch"
harness = false
