[package]
name = "lindelion-sample-library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["file-library"]
file-library = ["wav-decoder", "dep:blake3", "dep:rusqlite"]
wav-decoder = []

[dependencies]
blake3 = { version = "1.8.2", features = ["pure"], optional = true }
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
serde.workspace = true
