[package]
name = "lindelion-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication", "NSEvent", "NSPasteboard", "NSView"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSString", "NSURL"] }
rfd = "0.15.4"
vizia.workspace = true
