[package]
name = "glirdir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lindelion-dsp-utils.workspace = true
lindelion-midi.workspace = true
lindelion-onset-detect.workspace = true
lindelion-pitch-detect.workspace = true
lindelion-plugin-shell.workspace = true
lindelion-sample-library.workspace = true
serde.workspace = true
toml.workspace = true
vst3.workspace = true
