[package]
name = "linnod"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lindelion-dsp-utils.workspace = true
lindelion-midi.workspace = true
lindelion-onset-detect.workspace = true
lindelion-pitch-detect.workspace = true
lindelion-pitch-shift.workspace = true
lindelion-plugin-metadata.workspace = true
lindelion-plugin-shell.workspace = true
lindelion-sample-library = { workspace = true, features = ["file-library"] }
lindelion-ui.workspace = true
serde.workspace = true
toml.workspace = true
vst3.workspace = true

[dev-dependencies]
criterion.workspace = true
lindelion-test-allocator.workspace = true

[[bench]]
name = "runtime"
harness = false
