[package]
name = "resonator-synth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahara-dsp-utils.workspace = true
ahara-plugin-shell.workspace = true
ahara-sample-library.workspace = true
serde.workspace = true
toml.workspace = true
vst3.workspace = true
