[package]
name = "resonator-synth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahara-dsp-utils.workspace = true
ahara-plugin-shell.workspace = true
ahara-sample-library = { workspace = true, features = ["file-library"] }
ahara-ui.workspace = true
serde.workspace = true
toml.workspace = true
vst3.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
rfd = "0.15.4"
vizia.workspace = true
