[package]
name = "slicer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahara-dsp-utils.workspace = true
ahara-onset-detect.workspace = true
ahara-plugin-shell.workspace = true
ahara-psola.workspace = true
ahara-sample-library.workspace = true
ahara-ui.workspace = true
