[package]
name = "lindelion-speech-limiter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lindelion-dsp-utils.workspace = true
lindelion-effect.workspace = true

[dev-dependencies]
lindelion-fidelity.workspace = true
lindelion-test-allocator.workspace = true
