[package]
name = "lindelion-speech-spectral-contrast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lindelion-dsp-utils.workspace = true
lindelion-effect.workspace = true
lindelion-speech-signals.workspace = true

[dev-dependencies]
lindelion-fidelity.workspace = true
lindelion-test-allocator.workspace = true
