[package]
name = "lindelion-speech-voice-gate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lindelion-effect.workspace = true
lindelion-dsp-utils.workspace = true
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

[dev-dependencies]
lindelion-fidelity.workspace = true
lindelion-test-allocator.workspace = true
lindelion-sample-library = { workspace = true, features = ["wav-decoder"] }
